<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">AutoClean</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tela Header -->
    <string name="Header_title">Seu carro limpo, sem sair de casa!</string>

    <!-- Tela Login -->
    <string name="login_title">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="button_login">ENTRAR</string>
    <string name="or_continue_with">Ou continue com</string>
    <string name="google_login">Google</string>
    <string name="apple_login">Apple</string>
    <string name="no_account">Não possui uma conta?</string>
    <string name="create_account">Criar Conta</string>
    <string name="forgot_password">Esqueceu a Senha?</string>

    <!-- Tela de Cadastro -->
    <string name="register_title">Cadastro</string>
    <string name="name_hint">Nome e Sobrenome</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="create_account_button">CRIAR CONTA</string>
    <string name="already_have_account">Já possui conta?</string>
    <string name="login_text">Entrar</string>

    <!-- Opções de Login -->
    <string name="Apple">Apple</string>
    <string name="Google">Google</string>

    <!-- Recuperação de Conta -->
    <string name="recover_account_title">Redefinição de Senha!</string>
    <string name="recover_account_instructions">Informe seu e-mail e enviaremos um\ link para a recuperação de sua \senha.</string>
    <string name="send_button">ENVIAR LINK</string>

    <!-- Verificação de Telefone -->
    <string name="insert_phone_number">Insira seu número de celular</string>
    <string name="country">País</string>
    <string name="phone">Celular</string>
    <string name="phone_hint">(DDD) 00000-0000</string>
    <string name="verification_message">Você receberá um código para confirmar seu número de telefone.</string>
    <string name="btn_continue">CONTINUAR</string>

    <!-- Perfil do Usuário -->
    <string name="choose_profile">Escolha seu Perfil</string>
    <string name="btn_client">Cliente</string>
    <string name="btn_profissional">Profissional</string>

    <!-- Perfil Profissional -->
    <string name="personal_info">Informações Pessoais</string>
    <string name="fill_info_to_continue">Preencha as informações abaixo para \n continuar.</string>
    <string name="full_name_hint">Nome Completo</string>
    <string name="cpf_cnpj_hint">CPF ou CNPJ</string>
    <string name="birth_date_hint">Data de Nascimento</string>
    <string name="terms_text">Eu li e aceito os termos e condições.</string>

    <!-- Verificação Profissional -->
    <string name="info_instructions">Veja o que você precisa fazer para criar sua conta.</string>
    <string name="btn_profile_photo">Foto do perfil</string>
    <string name="btn_photo_with_cnh">Foto segurando a CNH</string>
    <string name="btn_cnh">CNH - Carteira de Motorista</string>
    <string name="btn_crlv">CRLV - Documento do Veículo</string>

    <!-- Verificação de Código -->
    <string name="insert_access_code">Insira o código de acesso</string>
    <string name="enter_4_digit_code">Digite o código de 4 dígitos que foi enviado para</string>
    <string name="example_phone">(DDD) 90000-0000</string>
    <string name="no_code_received">Não recebi o código</string>


    <!-- Kit Limpeza -->
    <string name="kit_cleaning_title">Kit Limpeza</string>
    <string name="kit_cleaning_description">Você precisa adquirir o kit de Limpeza da Auto Clean.</string>

    <!-- Detalhes do Kit -->
    <string name="kit_details">O que vem no Kit?</string>
    <string name="kit_details_title">Kit Details</string>
    <string name="cleaning_kit_title">Cleaning Kit</string>
    <string name="choose_kit_title">Choose Kit</string>

    <!-- Card Payment -->
    <string name="payment_title">Pagamento</string>
    <string name="card_number">Número do Cartão</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="card_holder_name">Nome no Cartão</string>
    <string name="card_holder_hint">Nome como escrito no cartão</string>
    <string name="validity_date">Data de Validade</string>
    <string name="validity_date_hint">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">123</string>
    <string name="installments">Parcelamento</string>
    <string name="installments_hint">Em 1x de R$ 3000,00</string>

    <!-- Pix Payment -->
    <string name="pix_payment">Pagamento Pix</string>
    <string name="order_label">Pedido</string>
    <string name="order_amount">Valor das Compras</string>
    <string name="pix_code_placeholder">Código Pix: aguarde...</string>
    <string name="copy_pix_code">Copiar Código Pix</string>
    <string name="view_receipt">Ver Recibo</string>


    <!-- Validation Kit Screen -->
    <string name="validation_kit_title">Validação do Kit</string>
    <string name="validation_kit_subtitle">(Envie um Vídeo)</string>
    <string name="validation_kit_instruction">Envie um Vídeo Mostrando o Conteúdo do Kit para Validação.</string>
    <string name="upload_button_text">ENVIAR</string>

    <!-- Payment Options Strings -->
    <string name="payment_options_title">Formas de pagamento</string>
    <string name="credit_card_option">Cartão de Crédito</string>
    <string name="pix_option">Pix</string>

    <!-- Kit Selection Screen Strings -->
    <string name="choose_option_prompt">Escolha uma das opções abaixo</string>
    <string name="already_have_kit">Já tenho o Kit</string>
    <string name="send_video_instructions">Você vai precisar enviar um vídeo do kit da Auto clean.</string>
    <string name="purchase_kit">Comprar o Kit</string>
    <string name="kit_price">R$ 3000,00</string>

    <string name="default_web_client_id">43935819173-cgoqgmgbs1lni9luoujumol4o2msnmc7.apps.googleusercontent.com</string>

    <!-- CRLV_Upload -->
    <string name="titulo_documento_veiculo">Documento do veículo</string>
    <string name="foto_documento_veiculo">Foto do Documento do Veículo - CRLV</string>
    <string name="instrucao_1">1. O documento deve aparecer por completo, de forma legível e nítida;</string>
    <string name="instrucao_2">2. Remova o documento do plástico, se possível;</string>
    <string name="instrucao_3">3. Escolha um ambiente iluminado para tirar a sua foto;</string>
    <string name="instrucao_4">4. Enquadre apenas o documento;</string>

    <!-- CNH_Upload -->
    <string name="title_foto_cnh">Foto da CNH</string>
    <string name="foto_cnh">Foto da sua CNH</string>
    <string name="instrucao_cnh_1">1. O documento deve aparecer por completo, de forma legível e nítida;</string>
    <string name="instrucao_cnh_2">2. Remova o documento do plástico, se possível;</string>
    <string name="instrucao_cnh_3">3. Escolha um ambiente iluminado para tirar a sua foto;</string>
    <string name="instrucao_cnh_4">4. Enquadre apenas o documento;</string>
    <string name="cnh_frente">Frente</string>
    <string name="cnh_verso">Verso</string>

    <!-- Foto_perfil-->
    <string name="foto_perfil">Foto de Perfil</string>
    <string name="tire_sua_foto_perfil">Tire sua foto do Perfil</string>
    <string name="instrucao_foto_perfil_1">1. Fique de frente a câmera e deixe os olhos e a boca visíveis;</string>
    <string name="instrucao_foto_perfil_2">2. Confira se a foto está nítida, bem iluminada e sem reflexos;</string>
    <string name="instrucao_foto_perfil_3">3. Não fotografe outra foto, não use filtros nem retoque a imagem;</string>

    <!-- Selfie com CNH-->
    <string name="selfie_com_cnh">Selfie com CNH</string>
    <string name="tire_sua_foto_com_cnh">Tire sua Foto segurando sua CNH</string>
    <string name="instrucao_selfie_cnh_1">1. Fique de frente a câmera segurando o documento ao lado do rosto.</string>
    <string name="instrucao_selfie_cnh_2">2. Confira se a foto está nítida, bem iluminada e sem reflexos.</string>



</resources>
