<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.CardPaymentFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include6"
            layout="@layout/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:background="@drawable/rounded_top_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="@dimen/line_height_large"
                android:text="@string/payment_title"
                android:textColor="@color/primary_variant2"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/default_padding"
                android:fontFamily="@font/inter"
                android:text="@string/card_number"
                android:textColor="@color/primary_variant2"
                android:textStyle="bold" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/card_number_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/default_padding"
                android:fontFamily="@font/inter"
                android:text="@string/card_holder_name"
                android:textColor="@color/primary_variant2"
                android:textStyle="bold" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/card_holder_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginTop="@dimen/default_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:padding="0dp"
                    android:text="@string/validity_date"
                    android:textColor="@color/primary_variant2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:padding="0dp"
                    android:text="@string/cvv"
                    android:textColor="@color/primary_variant2"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/margin_standard">

                <EditText
                    style="@style/PrimaryEditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:hint="@string/validity_date_hint"
                    android:layout_marginEnd="@dimen/default_padding" />

                <EditText
                    style="@style/PrimaryEditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:hint="@string/cvv_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginTop="@dimen/default_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/inter"
                    android:text="@string/installments"
                    android:textColor="@color/primary_variant2"
                    android:textStyle="bold" />

                <EditText
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:textColor="@color/primary_variant2"
                    android:layout_marginTop="@dimen/small_margin"
                    android:hint="@string/installments_hint"
                    android:drawableEnd="@drawable/ic_arrow_down" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="24dp"
                    android:text="@string/btn_continue"
                    style="@style/PrimaryButton" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>