<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include6"
            layout="@layout/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_top_border"
            android:layout_marginTop="270dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@color/primary_variant2"
                android:textSize="32sp"
                android:fontFamily="@font/inter"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"/>



            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="14sp" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp" />


            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="7dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />


            <com.google.android.material.button.MaterialButton
                style="@style/PrimaryButton"
                android:id="@+id/btn_createAccount"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:text="@string/create_account_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/primary_variant2"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="0dp">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButton"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:layout_marginStart="1dp"
                    android:text="@string/Google"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/google_1"
                    app:iconSize="24dp"
                    app:iconTint="@color/secondary_variant2"
                    app:iconGravity="textStart" />

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButton"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:layout_marginStart="40dp"
                    android:text="@string/Apple"
                    app:backgroundTint="@android:color/transparent"
                    app:icon="@drawable/apple1"
                    app:iconSize="24dp"
                    app:iconTint="@color/black"
                    app:iconGravity="textStart" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/secondary_variant"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/clickableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textColor="@color/secondary_variant2"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible"
            android:indeterminateTint="@color/primary_variant2"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
