<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.profile.ProfileProfissionalFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include6"
            layout="@layout/fragment_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="270dp"
            android:background="@drawable/rounded_top_border"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/include6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/inter"
                android:text="@string/personal_info"
                android:textColor="@color/primary_variant2"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/inter"
                android:text="@string/fill_info_to_continue"
                android:textColor="@color/secondary_variant"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputFieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/infoLayout">

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/full_name_hint"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textSize="14sp" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="16dp"
                android:textSize="14sp" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/cpf_cnpj_hint"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="14sp" />

            <EditText
                style="@style/PrimaryEditText"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/birth_date_hint"
                android:inputType="date"
                android:padding="16dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginTop="600dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/checkboxTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:lineSpacingExtra="4dp"
                android:linksClickable="true"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="680dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                style="@style/PrimaryButton"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:text="@string/btn_continue" />


        </LinearLayout>




    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>